# bambox

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES  cube_20mm.gcode.3mf  decoy_base.gcode.3mf  install-dev.sh  install.sh  pyproject.toml  test-cube-petgcf.gcode.3mf
bridge/: Cargo.toml  Dockerfile  build.rs
bridge/shim/: shim.cpp
bridge/src/: agent.rs  callbacks.rs  fetch.rs  ffi.rs  main.rs  print_job.rs  server.rs
changes/: +arm64-docs.misc  +autodetect-filament-fix.bugfix  +baked-docker-perms.bugfix  +bridge-migration-intent.misc  +bridge-rename.misc  +cura-ams-guide.misc  +cura-p1s-ams.feature  +daemon-warmup.bugfix  +daemon-watch.feature  +docker-uid-pull.bugfix  +fix-macos-creds.bugfix  +fix-tag-prefix-match.bugfix  +fix-testpypi-trigger.misc  +macos-docker-only.bugfix  +readme-cli-docs.misc  +release-detection-pr-lookup.bugfix  +uv-lock-sync.misc  +validate.feature  +watch-inplace.misc  +wire-bambox-headers.feature  109.misc  139.bugfix  156.bugfix  160.misc  161.misc  178.bugfix  179.misc  180.bugfix  202.bugfix  207.feature  210.feature  225.misc  243.bugfix  251.bugfix  255.misc  30.feature  37.feature  57.bugfix  58.feature  59.bugfix
docker/cura/: Dockerfile
docs/: bridge-migration-plan.md  cura-p1s-ams-guide.md  gcode-3mf-format.md
scripts/: install-test.sh
tests/: shared_fixtures.py  test_auth.py  test_bridge.py  test_bridge_docker.py  test_cli.py  test_credentials.py  test_cura.py  test_e2e.py  test_gcode_compat.py  test_pack.py  test_release_readiness.py  test_templates.py  test_validate.py
(+32 files in other folders)
